<resources>
    <string name="app_name">Star Wars Companion</string>
    <string name="app_short_name">Companion App</string>

    <string name="action_settings">Settings</string>
    <string name="action_quit">Quit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_menu_about">About</string>
    <string name="nav_menu_episodes">Episodes</string>
    <string name="nav_menu_characters">Characters</string>
    <string name="nav_menu_cinema">In cinema</string>
    <string name="nav_menu_project">About application</string>
    <string name="title_activity_episodes">Episodes</string>
    <string name="title_activity_project">ProjectActivity</string>
    <string name="title_activity_characters">CharactersActivity</string>
    <string name="title_activity_cinema">CinemaActivity</string>
    <string name="title_activity_movie">MovieActivity</string>


    //About application
    <string name="desc_about">"This application has been created on behalf of the university project Application development for mobile devices.
        This Application is only a testing project. We hope that you'll like the app. May the force be with you."</string>
    <string name="autor1">Jaroslav Maier</string>
    <string name="autor2">Michal Milner</string>
    <string name="authors">Project developers:</string>
    <string name="desc_instructions">"You can start using this application by selecting an item from the main menu. You can access the main menu by selecting
        the top left button or simply by swiping your finger from the left side of your screen."</string>
    //About movie
    <string name="about_movie">About Movie</string>
    <string name="about_starwars">Star Wars is an American epic space opera franchise, centered on a film series created by George Lucas. Every films begins a long time ago in a galaxy far, far away.\n
        The first film in the series, Star Wars (later subtitled Episode IV: A New Hope), was released on May 25, 1977 by 20th Century Fox and became a worldwide pop culture phenomenon. \nIt was followed by the similarly successful sequels The Empire Strikes Back (1980) and Return of the Jedi (1983); these three films constitute the original Star Wars trilogy. \nA prequel trilogy was later released between 1999 and 2005, which received a more mixed reaction from critics and fans, compared to the original trilogy.\n
        All six films were nominated for or won Academy Awards, and were commercial successes, with a combined box office revenue billion dolars.\n In 2015 was realesed new film Star Wars force awakens\n
        This movie continue on film Star Wars New Hope. For fans series are promised two another movies.
    </string>
    //Persons
    <string name="action_lightside">Light Side</string>
    <string name="action_darkside">Dark Side</string>
    //In cinema
    <string name="ep7">"Star Wars: Episode VII - The Force Awakens"</string>
    <string name="ep8">"Star Wars: Episode VIII"</string>
    <string name="ep9">"Star Wars: Episode IX"</string>
    <string name="header_premiere">Premiere: </string>
    <string name="header_director">Director: </string>
    <string name="header_actors">Actors: </string>
    <string name="premiere_ep7">December 17th 2015</string>
    <string name="director_ep7">J.J. Abrams</string>
    <string name="actors_ep7">"Harrison Ford, Mark Hamill, Carrie Fisher, Adam Driver, Daisy Ridley, John Boyega, Oscar Isaac, Lupita Nyong'o, Andy Serkis, Domhnall Gleeson, Anthony Daniels"</string>
    <string name="desc_ep7">"Three decades after the defeat of the Galactic Empire, a new threat arises. The First Order attempts to rule the galaxy and only a ragtag group of heroes can stop them, along with the help of the Resistance."</string>
    <string name="premiere_ep8">May 25th 2017</string>
    <string name="director_ep8">Rian Johnson</string>
    <string name="actors_ep8">"Daisy Ridley, Adam Driver, Carrie Fisher, Mark Hamill, Oscar Isaac, Domhnall Gleeson, John Boyega, Harrison Ford, Gwendoline Christie, Benicio Del Toro, Lupita Nyong'o, Andy Serkis, Max von Sydow, Anthony Daniels, Jimmy Vee"</string>
    <string name="desc_ep8">"Story continues and follows the seventh episode."</string>
    <string name="premiere_ep9">2019</string>
    <string name="director_ep9">Colin Trevorrow</string>
    <string name="actors_ep9">"Cast not announced yet"</string>
    <string name="desc_ep9">"Story and plot are not yet availible."</string>
</resources>
