<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/nav_menu_about" />
        <item
            android:id="@+id/nav_episodes"
            android:icon="@drawable/ic_menu_episodes"
            android:title="@string/nav_menu_episodes" />
        <item
            android:id="@+id/nav_characters"
            android:icon="@drawable/ic_menu_characters"
            android:title="@string/nav_menu_characters" />
        <item
            android:id="@+id/nav_cinema"
            android:icon="@drawable/ic_menu_cinema"
            android:title="@string/nav_menu_cinema" />
    </group>
</menu>