<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/star_background"
    app:layout_behavior="@string/appbar_scrolling_view_behavior" tools:showIn="@layout/app_bar_main"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/nav_header"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nav_menu_project"
                android:textColor="@color/spaceGold"
                android:gravity="center"
                android:textSize="@dimen/header1"/>
            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/header"
                android:text="@string/desc_about"
                android:textColor="@color/spaceGold"/>
            <ImageView
                android:layout_width="@dimen/img_square"
                android:layout_height="@dimen/img_square"
                android:src="@drawable/about_header"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/header2"
                android:layout_below="@id/description"
                android:layout_marginTop="@dimen/text_block"
                android:textSize="@dimen/header2"
                android:gravity="center"
                android:textColor="@color/spaceGold"
                android:textStyle="bold"
                android:text="@string/authors"/>
            <ImageView
                android:id="@+id/img_about_author1"
                android:layout_width="@dimen/img_square"
                android:layout_height="@dimen/img_square"
                android:src="@drawable/about_jm"
                android:layout_below="@id/header2"
                android:layout_marginTop="@dimen/text_block"
                android:layout_marginLeft="@dimen/text_block"/>
            <TextView
                android:id="@+id/text_author1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/img_about_author1"
                android:layout_below="@id/header2"
                android:layout_marginTop="@dimen/text_block"
                android:layout_marginLeft="@dimen/img_block"
                android:textColor="@color/spaceGold"
                android:text="@string/autor1"
                android:textStyle="bold"
                android:textSize="@dimen/names"/>

            <TextView
                android:id="@+id/text_author2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/img_about_author1"
                android:layout_marginTop="@dimen/text_block"
                android:layout_marginLeft="@dimen/text_block"
                android:textColor="@color/spaceGold"
                android:text="@string/autor2"
                android:textStyle="bold"
                android:textSize="@dimen/names"/>

            <ImageView
                android:id="@+id/img_about_author2"
                android:layout_width="@dimen/img_square"
                android:layout_height="@dimen/img_square"
                android:src="@drawable/about_mm"
                android:layout_below="@id/text_author1"
                android:layout_toRightOf="@id/text_author2"
                android:layout_marginTop="@dimen/text_block"
                android:layout_marginLeft="@dimen/img_block"
                />
            <TextView
                android:id="@+id/description2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_author2"
                android:layout_marginTop="@dimen/text_block"
                android:text="@string/desc_instructions"
                android:textColor="@color/spaceGold"/>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
